feat: Update branding and PWA assets with new logo
Replaces outdated gradient-based icons and theme colors with a new SVG logo for the application. Updates PWA manifest and touch icons to reflect the new branding. Also updates the primary theme color to a darker blue (#0f4c81).

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="theme-color" content="#f43f5e">
+    <meta name="theme-color" content="#0f4c81">
     <meta name="description" content="Controle financeiro profissional para quiosques de praia.">
     <title>Quiosque Estrela do Mar</title>
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/616/616554.png">
+    <link rel="icon" href="/logo.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/logo.svg">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
