feat: Update app icon and PWA manifest
Replaced the generic logo with a specific starfish icon for the app's favicon and Apple touch icon. Updated the PWA manifest and service worker to reflect this change, ensuring consistent branding. Also, introduced a `logoUrl` field in `AppSettings` to support custom logos in the future.

Minor adjustments made to modal animations and monthly summary chart rendering for improved UX. Corrected the handling of order closing to ensure accurate expense logging.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json">
-    <link rel="icon" href="/logo.svg?v=5" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="/logo.svg?v=5">
+    <link rel="icon" href="/starfish-icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/starfish-icon.svg">
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
