feat: Add barcode scanning and stock management
Introduces barcode scanning functionality to quickly add items to orders and settings.
Enhances product management with new fields for stock quantity, minimum stock alerts, unit of measure, and barcode.
Adds a dedicated 'Stock' view for monitoring and managing product inventory.
Updates the order form and settings panel to incorporate barcode scanning and stock updates.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="icon" href="/starfish-icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/starfish-icon.svg">
 
+    <!-- Barcode Scanner Library -->
+    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
