--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     margin: 0;
   }
 </style>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-surface-100 dark:bg-ocean-900 transition-colors duration-500 ease-in-out min-h-screen p-0 selection:bg-rose-500 selection:text-white overflow-x-hidden">
     <div id="root" class="w-full min-h-screen relative"></div>
